--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+<nav>
+    <p><a href="link1">link1</a></p>
+    <p><a href="link2">link2</a></p>
+    <p><a href="link3">link3</a></p>
+    <p><a href="link4">link4</a></p>
+</nav>
 
+<p>Hey, can you see this</p>
 </body>
+<footer>
+    <p>How about this?</p>
+</footer>
 </html>
