Initial commit of JS script.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Test Application 1</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-<nav>
-    <p><a href="link1">link1</a></p>
-    <p><a href="link2">link2</a></p>
-    <p><a href="link3">link3</a></p>
-    <p><a href="link4">link4</a></p>
-</nav>
+<html xmlns="http://www.w3.org/1999/html">
+    <head lang="en">
+        <meta charset="UTF-8">
+        <title>Test Application With JS</title>
+        <link href="style.css" rel="stylesheet" type="text/css">
+    </head>
 
-<p>Hey, can you see this</p>
-</body>
-<footer>
-    <p>How about this?</p>
-</footer>
+    <body>
+        <header>
+
+        </header>
+        
+        <main>
+            <section class="comment-input">
+
+            </section>
+
+            <section class="comments">
+
+            </section>
+      </main>
+
+        <footer>
+        </footer>
+
+        <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+        <script src="app.js"></script>
+    </body>
 </html>
