--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
         <header>
 
         </header>
-        
+
         <main>
             <section class="comment-input">
-
+                <p>Add your comment:</p>
+                <input type="text"><button>+</button>
             </section>
 
             <section class="comments">
-
+                <p>First comment</p>
+                <p>Second comment</p>
+                <p>Another comment</p>
             </section>
       </main>
 
