--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head lang="en">
         <meta charset="UTF-8">
         <title>Test Application With JS</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
@@ -28,6 +28,6 @@
         </footer>
 
         <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
-        <script src="app.js"></script>
+        <script src="javascripts/app.js"></script>
     </body>
 </html>
